--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <!-- css -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/main.css') }}">
+        <link rel= "stylesheet" type= "text/css" href= "static/styles/main.css">
 
-        <title>{{ title }}</title>
+        <title> EstonianWordCloud </title>
     </head>
 
 
@@ -87,8 +87,8 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 
-        <script src="{{ url_for('static',filename='js/vis.js') }}"></script>
-        <script src="{{ url_for('static',filename='js/main.js') }}"></script>
+        <script src="static/js/vis.js"></script>
+        <script src="static/js/main.js"></script>
 
         <!-- Google Analytics-->
         <script>
